--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -1,6 +1,29 @@
-<h1>
-    {{titulo}}
-<ul>
-    <li *ngFor="let cliente of clientes">{{cliente.nome}}</li>
-</ul>
-</h1>
+<div class="container">
+
+
+  <div *ngIf="clienteSelecionado">
+    <app-titulo [titulo]="'Cliente: ' + clienteSelecionado"></app-titulo>
+    <button class="btn btn-default" (click)="voltar()">Voltar</button>
+  </div>
+
+  <div *ngIf="!clienteSelecionado">
+    <app-titulo [titulo]="titulo"></app-titulo>
+    <table class="table table-hover">
+      <thead class="thead-light">
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Nome</th>
+          <th scope="col">Sobrenome</th>
+          <th scope="col">Email</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let cliente of clientes" style="cursor: pointer;" (click)="clienteSelect(cliente)">
+          <th scope="row">{{ cliente.id }}</th>
+          <td>{{ cliente.nome }}</td>
+          <td>{{ cliente.sobrenome }}</td>
+          <td>{{ cliente.email }}</td>
+        </tr>
+      </tbody>
+    </table>
+
