--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,7 @@
-<p>
-  dashboard works!
-</p>
+<div class="container">
+  <app-titulo [titulo]="titulo"></app-titulo>
+  <p>
+    dashboard works!
+  </p>
+</div>
+
