--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,29 +1,32 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a routerLink="dashboard" class="navbar-brand">Principal</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light ">
+<div class="container">
+  <a routerLink="dashboard" class="navbar-brand" >Principal</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a routerLink="clientes" routerLinkActive="active" class="nav-link">clientes</a>
+  <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNavDropdown">
+    <ul class="navbar-nav" >
+      <li class="nav-item active">
+        <a routerLink="clientes" routerLinkActive="active" class="nav-link" >Clientes</a>
       </li>
       <li class="nav-item">
-        <a routerLink="recrutadores/" routerLinkActive="active" class="nav-link">recrutadores</a>
+        <a routerLink="recrutadores/" routerLinkActive="active" class="nav-link">Recrutadores</a>
       </li>
-      <li class="nav-item">
-        <a routerLink="perfil" routerLinkActive="active" class="nav-link">perfil</a>
-      </li>
+    </ul>
+    <ul class="navbar-nav" dropdown>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown link
+        <a id="button-basic" dropdownToggle class="nav-link dropdown-toggle"
+        id="navbarDropdownMenuLink" role="button" style="cursor: pointer"
+        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Mais
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+        <div id="dropdown-basic" *dropdownMenu  class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a routerLink="perfil" class="dropdown-item" href="#">Perfil</a>
+          <a class="dropdown-item" href="#">Sair</a>
         </div>
       </li>
     </ul>
   </div>
+</div>
 </nav>
+
